<resources>
    <string name="app_name">MeetMeThereAndroid</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="accept">Accept</string>
    <string name="maybe">Maybe</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="decline">Decline</string>
    <string name="events">Events</string>
    <string name="back_button">Back button</string>
    <string name="event_detail_image">Event Detail image</string>
    <string name="invited_by">Invited by</string>
    <string name="favorites">Favorites</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="venue">Venue</string>
    <string name="start">Start</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="end">End</string>
    <string name="create_event">Create event</string>
    <string name="event_created">Event was created</string>
    <string name="event_not_created">Cannot create event</string>
    <string name="event_updated">Event was updated</string>
    <string name="event_not_updated">Cannot update event</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_wrong_format">Wrong email format</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="new_password_confirmation">New Password confirmation</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="settings">Settings</string>
    <string name="start_day_settings">Set event start day</string>
    <string name="start_time_settings">Set event start time</string>
    <string name="end_day_settings">Set event end day</string>
    <string name="end_time_settings">Set event end time</string>
    <string name="specify_valid_time">You need to specify a valid time</string>
    <string name="slider">Slider</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="deleteEventConfirmationMsg">Are you sure to delete this event?</string>
    <string name="deleteAttributeConfirmationMsg">Are you sure to delete this attribute?</string>
    <string name="deleteThisEventQuestion">Delete this event?</string>
    <string name="deleteThisAttributeQuestion">Delete this attribute?</string>
    <string name="detail_attendance_question">Will you attend this event?</string>
    <string name="list_selected_event_title">Currently selected event</string>
    <string name="logout_button">Logout Button</string>
    <string name="missing_key">You need to specify key</string>
    <string name="missing_value">You need to specify value</string>
    <string name="missing_username">You need to specify username</string>
    <string name="missing_email">You need to specify email</string>
    <string name="missing_password">You need to specify password</string>
    <string name="missing_password_confirmation">You need to confirm password</string>
    <string name="passwords_not_match">Password confirmation does not match password</string>
    <string name="wrong_login">Invalid password or user does not exist</string>
    <string name="duplicate_username">This username is already in use</string>
    <string name="duplicate_email">This email is already in use</string>
    <string name="show_organized_events">Show organized events</string>
    <string name="show_attributes">Show attributes</string>
    <string name="signed_off_note">You\'ve been signed off</string>
    <string name="edit_user_profile_title">Edit user profile</string>
    <string name="no_signed_in_user">No signed in user</string>
    <string name="user_profile_title">User profile</string>
    <string name="edit_user_attributes">Edit attributes</string>
    <string name="change_password">Change password</string>
    <string name="my_organized_events">My organized events</string>
    <string name="no_organized_events">No events yet 😔</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_was_changed">Password was changed</string>
    <string name="password_was_not_changed">Cannot change password</string>
    <string name="user_attributes_title">Attributes</string>
    <string name="user_attributes_empty">No user attributes</string>
    <string name="user_updated">User updated</string>
    <string name="user_cannot_update">Cannot update user</string>
    <string name="user_attribute_deleted">Attribute was deleted</string>
    <string name="user_attribute_cannot_delete">Cannot delete attribute</string>
    <string name="user_attribute_create">Create attribute</string>
    <string name="user_attribute_created">Attribute created</string>
    <string name="user_attribute_cannot_get">Cannot get user attributes</string>
    <string name="user_attribute_cannot_create">Cannot create user attribute</string>
    <string name="user_attribute_duplicate">Attribute already exists</string>
    <string name="create_attribute_floating_button">Create attribute floating button</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="create">Create</string>
</resources>