<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/event_create_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black" />

    <ImageButton
        android:id="@+id/event_create_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        android:focusable="true"
        android:padding="8dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@id/event_create_toolbar"
        app:layout_constraintEnd_toEndOf="@id/event_create_toolbar"
        app:layout_constraintTop_toTopOf="@id/event_create_toolbar"
        app:tint="@color/black"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_create_toolbar"
        app:startIconDrawable="@drawable/ic_event">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_create_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_create_venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/venue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_create_name"
        app:startIconDrawable="@drawable/ic_home">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_create_venue_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_create_venue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_create_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/event_create_start_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_create_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_create_start_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/day"
        app:endIconDrawable="@drawable/ic_dropdown"
        app:endIconMode="custom"
        app:layout_constraintEnd_toStartOf="@id/event_create_start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_create_start_title"
        app:startIconDrawable="@drawable/ic_calendar_day">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_create_start_day_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_create_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/time"
        app:endIconDrawable="@drawable/ic_dropdown"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/event_create_start_day"
        app:layout_constraintTop_toBottomOf="@id/event_create_start_title"
        app:startIconDrawable="@drawable/ic_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_create_start_time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/event_create_end_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_create_start_day" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_create_end_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/day"
        app:endIconDrawable="@drawable/ic_dropdown"
        app:endIconMode="custom"
        app:layout_constraintEnd_toStartOf="@id/event_create_end_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_create_end_title"
        app:startIconDrawable="@drawable/ic_calendar_day">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_create_end_day_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_create_end_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/time"
        app:endIconDrawable="@drawable/ic_dropdown"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/event_create_end_day"
        app:layout_constraintTop_toBottomOf="@id/event_create_end_title"
        app:startIconDrawable="@drawable/ic_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_create_end_time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>